--- a/category-page.html
+++ b/category-page.html
@@ -168,6 +168,167 @@
                     <div class="menu_subcategory">
 
                     </div>
+                    <div class="mobile_category_menu">
+                        <ul>
+                            <li class="m_li"><span class="m_li dropbtn2">Брендированная одежда</span>
+                                <ul class="dropdown_container">
+                                    <li>Футболки</li>
+                                    <li>Сумки и рюкзаки</li>
+                                    <li>Униформа</li>
+                                    <li>Флисовые кофты</li>
+                                    <li>Кепки и бейсболки</li>
+                                    <li>Жилетки и куртки</li>
+                                    <li>Фартуки</li>
+                                </ul>
+                            </li>
+                            <li class="m_li"><span class="m_li dropbtn2">Наружная реклама</span>
+                                <ul class="dropdown_container">
+                                    <li>Объёмные буквы</li>
+                                    <li>Вывески</li>
+                                    <li>Крышные конструкции</li>
+                                    <li>Лайтбоксы/Световые короба</li>
+                                    <li>Оформление витрин</li>
+                                    <li>Обшивка фасада композитом</li>
+                                    <li>Информационные таблички</li>
+                                    <li>Оформление входных групп и козырьков</li>
+                                    <li>Рекламные конструкции</li>
+                                    <li>Брендирование транспорта</li>
+                                    <li>Уличные флажные конструкции</li>
+                                    <li>LED Дисплеи</li>
+                                </ul>
+                            </li>
+                            <li class="m_li"><span class="m_li dropbtn2">Широкоформатная печать</span>
+                                <ul class="dropdown_container">
+                                    <li>Печать на баннере</li>
+                                    <li>Печать на пленке</li>
+                                    <li>Печать на баннерной сетке</li>
+                                    <li>Печать на холсте</li>
+                                    <li>Печать на бумаге</li>
+                                </ul>
+                            </li>
+                            <li class="m_li"><span class="m_li dropbtn2">Оформление интерьеров</span>
+                                <ul class="dropdown_container">
+                                    <li>Системы визуальной навигации</li>
+                                    <li>Стойки Ресепшн</li>
+                                    <li>Световой логотип</li>
+                                    <li>Системы освещения</li>
+                                    <li>Изготовление фотозон</li>
+                                    <li>Уголки покупателя</li>
+                                    <li>Изготовление часов</li>
+                                    <li>Оформление витрин</li>
+                                    <li>Оформление торгового зала</li>
+                                    <li>Стенды для образцов</li>
+                                    <li>Информационный стенд</li>
+                                    <li>Буквы из пенопласта</li>
+                                    <li>Рекламные конструкции</li>
+                                    <li>Оформление стеклянных перегородок</li>
+                                </ul>
+                            </li>
+                            <li class="m_li"><span class="m_li dropbtn2">Сувенирная продукция</span>
+                                <ul class="dropdown_container">
+                                    <li>Ручки</li>
+                                    <li>Аксессуары </li>
+                                    <li>Антистрессы</li>
+                                    <li>Брелки</li>
+                                    <li>Флаги и флажки</li>
+                                    <li>ЭКО изделия из дерева и фанеры</li>
+                                    <li>Воздушные шары</li>
+                                    <li>Пакеты и упаковка</li>
+                                    <li>Чашки и посуда</li>
+                                    <li>Флешки и PowerBank</li>
+                                    <li>Ароматизаторы в автомобиль</li>
+                                    <li>Магниты</li>
+                                    <li>Зонты</li>
+                                    <li>Изготовление часов</li>
+                                    <li>Шоколадки</li>
+                                    <li>Значки</li>
+                                    <li>Дисконтные карты/удостоверения</li>
+                                    <li>Ежедневники</li>
+                                </ul>
+                            </li>
+                            <li class="m_li"><span class="m_li dropbtn2">Полиграфия</span>
+                                <ul class="dropdown_container">
+                                    <li>Визитки</li>
+                                    <li>Буклеты/Лифлеты/листовки</li>
+                                    <li>Ежедневники</li>
+                                    <li>Блокноты</li>
+                                    <li>Каталоги и брошюры</li>
+                                    <li>Упаковка</li>
+                                    <li>Плакаты</li>
+                                    <li>Календари</li>
+                                </ul>
+                            </li>
+                            <li class="m_li"><span class="m_li dropbtn2">Корпоративный стиль</span>
+                                <ul class="dropdown_container">
+                                    <li>Разработка корпоративного стиля</li>
+                                    <li>Брендирование транспорта</li>
+                                    <li>Полиграфия</li>
+                                    <li>Сувенирная продукция</li>
+                                    <li>Брендбук</li>
+                                    <li>Упаковка</li>
+                                    <li>Оформление выставок</li>
+                                </ul>
+                            </li>
+                            <li class="m_li"><span class="m_li dropbtn2">Освещение</span>
+                                <ul class="dropdown_container">
+                                    <li>Люстры</li>
+                                    <li>Световые короба (Лайтбоксы)</li>
+                                    <li>Архитектурная подсветка</li>
+                                    <li>Освещение витрин</li>
+                                </ul>
+                            </li>
+                            <li class="m_li"><span class="m_li dropbtn2">POS Материалы</span>
+                                <ul class="dropdown_container">
+                                    <li>Топперы</li>
+                                    <li>Воблеры</li>
+                                    <li>Изделия из акрила и оргстекла</li>
+                                    <li>Подставки под товар</li>
+                                    <li>Шелфтокеры</li>
+                                    <li>Стопперы</li>
+                                    <li>Холдеры</li>
+                                </ul>
+                            </li>
+                            <li class="m_li"><span class="m_li dropbtn2">Выставочные стенды</span>
+                                <ul class="dropdown_container">
+                                    <li>Портативный стенд ROLL-UP</li>
+                                    <li>Портативный стенд X-BANNER (паук)</li>
+                                    <li>Стенд POP UP</li>
+                                    <li>Промостойка</li>
+                                    <li>Выставочный стенд</li>
+                                    <li>Разборной стенд для баннера</li>
+                                    <li>Фотозона</li>
+                                    <li>Штендеры</li>
+                                    <li>Стенды для образцов</li>
+                                    <li>Информационный стенд</li>
+                                </ul>
+                            </li>
+                            <li class="m_li"><span class="m_li dropbtn2">Эксклюзив</span>
+                                <ul class="dropdown_container">
+                                    <li>Изготовление мебели из металла и дерева</li>
+                                    <li>Часы и предметы интерьера</li>
+                                    <li>Элементы освещения</li>
+                                    <li>Нестандартные рекламные конструкции</li>
+                                    <li>Цветодинамические дисплеи</li>
+                                </ul>
+                            </li>
+                            <li class="m_li"><span class="m_li dropbtn2">Дополнительные услуги</span>
+                                <ul class="dropdown_container">
+                                    <li>Лазерная резка</li>
+                                    <li>Лазерная гравировка</li>
+                                    <li>Дизайн</li>
+                                    <li>Маркетинг</li>
+                                    <li>3D - Печать</li>
+                                    <li>Плоттерная резка</li>
+                                    <li>Высотные работы</li>
+                                    <li>Изделия из фанеры</li>
+                                    <li>Вышивка</li>
+                                    <li>Шелкотрафаретная печать</li>
+                                    <li>Ультрафиолетовая печать </li>
+                                    <li>Оформление выставок </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                     <div class="menu_service_img">
                         <img class="change-image" data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
                     </div>
