+Hide Header on on scroll down

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!--HEADER-->
-<header>
+<header class="nav-down">
         <div class="header_wrapper">
             <p class="white"><a href="/" class="logo big">ADVANCE</a></p>
             <nav class="main_menu">
