--- a/about-us.html
+++ b/about-us.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!--HEADER-->
-<header>
+<header class="nav-down">
     <div class="header_wrapper">
         <p class="white"><a href="/" class="logo big">ADVANCE</a></p>
         <nav class="main_menu">
@@ -40,7 +40,6 @@
                         </div>
                         <div class="menu_category_img">
                             <img class="change-image" data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
-                            <div class="menu_category_img_border"></div>
                         </div>
                     </div>
                 </li>
@@ -53,6 +52,38 @@
         <div class="menu_tel">
             <a href="tel://057 761 761 6" class="orange">057 761 761 6</a>
         </div>
+    </div>
+    <div class="mob_menu">
+        <nav role="navigation">
+            <div id="menuToggle">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul id="menu">
+                    <li><a href="portfolio.html" class="m_li">Портфолио</a></li>
+                    <li><a href="#" class="m_li dropbtn2">Услуги</a>
+                        <ul class="dropdown_container">
+                            <li class="m_li"><a href="category-page.html">Брендированная одежда</a></li>
+                            <li class="m_li">Наружная реклама</li>
+                            <li class="m_li">Широкоформатная печать</li>
+                            <li class="m_li">Оформление интерьеров</li>
+                            <li class="m_li">Сувенирная продукция</li>
+                            <li class="m_li">Полиграфия</li>
+                            <li class="m_li">Корпоративный стиль</li>
+                            <li class="m_li">Освещение</li>
+                            <li class="m_li">POS Материалы</li>
+                            <li class="m_li">Выставочные стенды</li>
+                            <li class="m_li">Эксклюзив</li>
+                            <li class="m_li">Дополнительные услуги</li>
+                        </ul>
+                    </li>
+                    <li><a href="about-us.html" class="m_li">О нас</a></li>
+                    <li><a href="news.html" class="m_li">Новости</a></li>
+                    <li><a href="contacts.html" class="m_li">Контакты</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
 </header>
 <!--HEADER END-->
@@ -134,12 +165,14 @@
     <div class="vacancy_left">
         <p class="why_we_slogan bigger_center white">Вакансии</p>
         <p class="white">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек</p>
-        <div>
+        <div class="vacancy_block">
             <p class="white fs20">Менеджер</p>
+            <p class="vacancy_item">Represents the formula min(max-content, max(auto, argument)), which is calculated similar to auto (i.e. minmax(auto, max-content)), except that the track size is clamped at argument if it is greater than the auto minimum.</p>
             <p class="orange t_btn">Читать дальше</p>
         </div>
-        <div>
+        <div class="vacancy_block">
             <p class="white fs20">Графический дизайнер</p>
+            <p class="vacancy_item">Represents the formula min(max-content, max(auto, argument)), which is calculated similar to auto (i.e. minmax(auto, max-content)), except that the track size is clamped at argument if it is greater than the auto minimum.</p>
             <p class="orange t_btn">Читать дальше</p>
         </div>
     </div>
