vacancy buttons script +

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                    </ul>
                </div>
            </nav>
+           <p class="white"><a href="/" class="logo big">ADVANCE</a></p>
        </div>
 </header>
 <!--HEADER END-->
