--- a/about-us.html
+++ b/about-us.html
@@ -284,7 +284,7 @@
                 <div class="footer_nav">
                     <nav class="main_menu">
                         <ul class="menu_ul">
-                            <li class="fs20 active">Услуги</li>
+                            <li class="fs20">О нас</li>
                             <li class="fs20">Портфолио</li>
                             <li class="fs20">Новости</li>
                             <li class="fs20">Контакты</li>
