--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="main_menu">
                 <ul class="menu_ul">
                     <li class="fs20">
-                        <a href="#" class="dropbtn m_li">Услуги</a>
+                        <a href="#" class="dropbtn arrowDown m_li">Услуги</a>
                         <div class="dropdown_wrapper">
                             <div class="menu_category">
                                 <ul>
@@ -310,13 +310,16 @@
     </div>
     <div class=why_we_wrapper>
         <div class="why_container">
+            <img data-lazy="src/img/main/lamp.svg" src="/" alt="decoration">
             <p>Мы воплотим в жизнь<br>
                 замысел любой сложности</p>
         </div>
         <div class="why_container">
+            <img data-lazy="src/img/main/clock.svg" src="/" alt="decoration">
             <p>Мы всегда выполняем<br> заказы в срок</p>
         </div>
         <div class="why_container">
+            <img data-lazy="src/img/main/piggy-bank.svg" src="/" alt="decoration">
             <p>Заказав рекламу у нас<br>
                 Вы существенно сэкономите</p>
         </div>
@@ -500,7 +503,7 @@
                 <div class="footer_nav">
                     <nav class="main_menu">
                         <ul class="menu_ul">
-                            <li class="fs20 active">Услуги</li>
+                            <li class="fs20">О нас</li>
                             <li class="fs20">Портфолио</li>
                             <li class="fs20">Новости</li>
                             <li class="fs20">Контакты</li>
