pavki1 main+xxx

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                             <div class="menu_category">
                                 <ul>
                                     <li class="m_li menu_category_bnt1"><a href="category-page.html">Брендированная одежда</a></li>
-                                    <li class="m_li menu_category_bnt2">Наружная реклама</li>
-                                    <li class="m_li menu_category_bnt3">Широкоформатная печать</li>
+                                    <li class="m_li menu_category" data-category="btn_m">Наружная реклама</li>
+                                    <li class="m_li menu_category" data-category="btn_m1">Широкоформатная печать</li>
                                     <li class="m_li menu_category_bnt4">Оформление интерьеров</li>
                                     <li class="m_li menu_category_bnt5">Сувенирная продукция</li>
                                     <li class="m_li menu_category_bnt6">Полиграфия</li>
@@ -39,7 +39,7 @@
 
                             </div>
                             <div class="menu_category_img">
-                                <img class="change-image" data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
+                                <img class="change-image" data-lazy="src/img/ABOUT.png" src="/" alt="Advance" />
                             </div>
                         </div>
                     </li>
@@ -84,7 +84,7 @@
                    </ul>
                </div>
            </nav>
-           <p class="white"><a href="/" class="logo big">ADVANCE</a></p>
+           <p class="mob_logo white"><a href="/" class="logo big">ADVANCE</a></p>
        </div>
 </header>
 <!--HEADER END-->
@@ -92,7 +92,10 @@
 <section class="main_top_wrapper">
     <p class="very_big">ADVANCE</p>
     <hr class="logo_underline">
-    <p class="big">Разработка и производство рекламы</p>
+    <div class="title-wrapper"><p id="home_title">Advanced</p>
+        <input type="hidden" value="Разработка и производство рекламы,UNCOVER YOUR NEEDS,IMPACTFUL,TRANSPARENT,DATA-DRIVEN" id="home_title_value">
+    </div>
+<!--    <p class="big">Разработка и производство рекламы</p>-->
 </section>
 <!--SERVICE SECTION-->
 <section class="main_service_wrapper">
@@ -282,14 +285,14 @@
                                 <li>Изделия из фанеры</li>
                                 <li>Вышивка</li>
                                 <li>Шелкотрафаретная печать</li>
-                                <li>Ультрафиолетовая печать </li>
-                                <li>Оформление выставок </li>
+                                <li>Ультрафиолетовая печать</li>
+                                <li>Оформление выставок</li>
                             </ul>
                         </li>
                     </ul>
                 </div>
                 <div class="menu_service_img">
-                    <img class="change-image" data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
+                    <img class="change-image" data-lazy="src/img/ABOUT.png" src="/" alt="Advance" />
                 </div>
             </div>
         </div>
@@ -367,26 +370,26 @@
     </div>
     <div class="main_our_works_img_wrapper">
         <div class="main_gallery">
-            <div class="gallery_item"><img data-lazy="src/img/black.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item long"><img  data-lazy="src/img/blue.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/yellow.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img data-lazy="src/img/main/best/1E1R1841.png" src="/" alt="Black Image" /></div>
+            <div class="gallery_item long"><img  data-lazy="src/img/main/best/IMG_0018.jpeg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_0405.png" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_0991.jpeg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_3366.jpg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_3937.jpg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_4214.jpg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_4228.jpg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_4815.jpg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_6086.jpg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_g5858.jpg" src="/" alt="Black Image" /></div>
         </div>
         <div class="main_gallery hidden_g">
-            <div class="gallery_item"><img  data-lazy="src/img/black.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/blue.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/yellow.jpg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_6086.jpg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_6165.jpg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_6173.jpg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item long"><img  data-lazy="src/img/main/best/IMG_0028.png" src="/" alt="Black Image" /></div>
+            <div class="gallery_item long"><img  data-lazy="src/img/main/best/IMG_0018.jpeg" src="/" alt="Black Image" /></div>
             <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item long"><img data-lazy="src/img/black.jpg" src="/" alt="Black Image" /></div>
+            <div class="gallery_item long"><img data-lazy="src/img/main/best/IMG_1443.png" src="/" alt="Black Image" /></div>
             <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
             <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
             <div class="gallery_item"><img  data-lazy="src/img/red.jpg" src="/" alt="Black Image" /></div>
@@ -532,5 +535,75 @@
         <p>Copyright &copy; 2019-2020 ADVANCE.<br> All rights reserved</p>
     </div>
 </footer>
+<script>
+    var replaceText = {
+        $text_container: null,
+        replace_delay: 1000,
+        text_arr: [],
+        current_text_key: 0,
+        current_text: '',
+        current_char_key: 0,
+        initReplace: function(text_arr, text_container_id) {
+            this.text_arr = text_arr;
+            this.$text_container = $('#' + text_container_id);
+
+            if(this.$text_container.length) {
+                this.runReplace();
+            }
+        },
+        replace: function() {
+            this.updateTextKey();
+
+            this.current_text = this.text_arr[this.current_text_key];
+            this.current_char_key = 0;
+
+            this.$text_container.html('');
+
+            this.runType();
+        },
+        runReplace: function() {
+            setTimeout(function() {
+                replaceText.replace();
+            },  this.replace_delay);
+        },
+        updateTextKey: function() {
+            this.current_text_key = (this.current_text_key + 1) % this.text_arr.length;
+        },
+        typeDelay: function() {
+            var min_delay = 10,
+                max_delay = 150;
+
+            return Math.random() * (max_delay - min_delay) + min_delay;
+        },
+        typeText: function() {
+            var letter = this.current_text.charAt(this.current_char_key);
+
+            this.$text_container.append(letter);
+
+            if(this.current_char_key < this.current_text.length) {
+                this.runType();
+                this.current_char_key++;
+            } else {
+                this.runReplace();
+            }
+        },
+        runType: function() {
+            setTimeout(function() {
+                replaceText.typeText();
+            },  this.typeDelay());
+        }
+    }
+
+    function animateText() {
+        var text_list = $('#home_title_value').val().split(',');
+
+        replaceText.initReplace(text_list, 'home_title');
+    }
+
+    $(function() {
+
+        animateText();
+
+    });</script>
 </body>
 </html>
