--- a/portfolio.html
+++ b/portfolio.html
@@ -102,11 +102,11 @@
         </div>
         <div class="xxx1">
             <div class="tab_control_container">
-                    <button class="btn" onclick="openCategory(event,'c_brand')">Брендированная одежда</button>
-                    <button class="btn" onclick="openCategory(event,'c_test')">Широкоформатная печать</button>
-                    <button class="btn" onclick="openCategory(event,'c_exclusive1')">Сувенирная продукция</button>
-                    <button class="btn" onclick="openCategory(event,'c_exclusive1')">Корпоративный стиль</button>
-                    <button class="btn" onclick="openCategory(event,'c_exclusive1')">Наружная реклама</button>
+                <button class="btn" onclick="openCategory(event,'c_brand')">Брендированная одежда</button>
+                <button class="btn" onclick="openCategory(event,'c_test')">Широкоформатная печать</button>
+                <button class="btn" onclick="openCategory(event,'c_exclusive1')">Сувенирная продукция</button>
+                <button class="btn" onclick="openCategory(event,'c_exclusive1')">Корпоративный стиль</button>
+                <button class="btn" onclick="openCategory(event,'c_exclusive1')">Наружная реклама</button>
 <!--                !!!!-->
                 <button class="btn" onclick="openCategory(event,'c_brand')">Оформление интерьеров</button>
                 <button class="btn" onclick="openCategory(event,'c_polygraphy')">Полиграфия</button>
@@ -119,7 +119,7 @@
             <div class="works_container">
                 <div class="works_wrapper category" id="c_brand">
                     <div class="img_wrapper" onclick="openModal();currentSlide(1)">
-                        <img data-lazy="src/img/blog/1.png" src="/" alt="decoration">
+                        <img data-lazy="src/img/cat/clothes/c1.jpg" src="/" alt="decoration">
                         <div class="p_overlay">
                             <div>
                                 <span>Название и описание</span>
@@ -128,19 +128,49 @@
                         </div>
                     </div>
                     <div class="img_wrapper">
-                        <img data-lazy="src/img/blog/1.png" src="/" alt="decoration">
+                        <img data-lazy="src/img/cat/clothes/c7.jpg" src="/" alt="decoration">
+                        <div class="p_overlay">
+                            <div>
+                                <span>Название и описание</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="img_wrapper">
-                        <img data-lazy="src/img/blog/1.png" src="/" alt="decoration">
+                        <img data-lazy="src/img/cat/clothes/c17.jpg" src="/" alt="decoration">
+                        <div class="p_overlay">
+                            <div>
+                                <span>Название и описание</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="img_wrapper">
-                        <img data-lazy="src/img/blog/1.png" src="/" alt="decoration">
+                        <img data-lazy="src/img/cat/clothes/c6.jpg" src="/" alt="decoration">
+                        <div class="p_overlay">
+                            <div>
+                                <span>Название и описание</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="img_wrapper">
-                        <img data-lazy="src/img/blog/1.png" src="/" alt="decoration">
+                        <img data-lazy="src/img/cat/clothes/c8.jpg" src="/" alt="decoration">
+                        <div class="p_overlay">
+                            <div>
+                                <span>Название и описание</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="img_wrapper">
-                        <img data-lazy="src/img/blog/1.png" src="/" alt="decoration">
+                        <img data-lazy="src/img/cat/clothes/c10.jpg" src="/" alt="decoration">
+                        <div class="p_overlay">
+                            <div>
+                                <span>Название и описание</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 <!--                CATEGORY-->
@@ -186,19 +216,19 @@
         <div class="modal-content">
 
             <div class="mySlides">
-                <img data-lazy="src/img/blog/1.png" src="/"  style="width:100%">
+                <img data-lazy="src/img/cat/clothes/c1.jpg" src="/"  style="width:100%;height: 900px;">
             </div>
 
             <div class="mySlides">
-                <img data-lazy="src/img/blog/2.png" src="/" style="width:100%">
+                <img data-lazy="src/img/cat/clothes/c5.jpg" src="/" style="width:100%;height: 900px;">
             </div>
 
             <div class="mySlides">
-                <img data-lazy="src/img/blog/3.png" src="/" style="width:100%">
+                <img data-lazy="src/img/cat/clothes/c6.jpg" src="/" style="width:100%;height: 900px;">
             </div>
 
             <div class="mySlides">
-                <img data-lazy="src/img/blog/1.png" src="/" style="width:100%">
+                <img data-lazy="src/img/cat/clothes/c10.jpg" src="/" style="width:100%;height: 900px;">
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
