--- a/contacts.html
+++ b/contacts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Advance</title>
     <link rel="stylesheet" href="css/style.min.css">
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="src/script/jquery.min.js"></script>
     <script defer src="src/script/lazy.js"></script>
     <script defer src="src/script/main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -91,7 +91,7 @@
 </div>
 <section class="about_us contacts">
     <div class="about_us_top">
-        <p class="bigger">ADVANCE - a3a3a ololo</p>
+        <p class="fs48_r">ADVANCE - a3a3a ololo</p>
     </div>
     <div class="xxx1">
         <div class="about_us_center">
