--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Advance</title>
     <link rel="stylesheet" href="css/style.min.css">
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="src/script/jquery.min.js"></script>
     <script defer src="src/script/lazy.js"></script>
     <script defer src="src/script/main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -436,7 +436,8 @@
                                 <label for="f_message">Сообщение</label>
                                 <textarea id="f_message" rows="5" cols="33"></textarea>
                             </div>
-                            <button type="submit"  class="adv_btn fs20 f_btn">Отправить</button>
+<!--                            <button type="submit"  class="adv_btn fs20 f_btn btn4">Отправить</button>-->
+                            <button type="submit"  class="btn-2"><span>Отправить</span></button>
                         </form>
                     </div>
                 </div>
