--- a/subcategory-page.html
+++ b/subcategory-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Advance</title>
     <link rel="stylesheet" href="css/style.min.css">
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="src/script/jquery.min.js"></script>
     <script defer src="src/script/lazy.js"></script>
     <script defer src="src/script/main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -93,7 +93,7 @@
     <div class="category_container subcategory_fix">
         <div class="category_top_container">
             <div>
-                <p class="bigger">Название подгатегории</p>
+                <p class="fs48_r">Название подгатегории</p>
             </div>
             <div class="category_top_triangles">
                 <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
